# coreutils

./: README.md  justfile
01_hello/: Cargo.toml
01_hello/tests/: cli.rs
02_echor/: Cargo.toml  mk-outs.sh
02_echor/src/: lib.rs  main.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: lib.rs  main.rs
03_catr/tests/inputs/: create-cant-touch-this.sh
04_headr/: Cargo.toml
04_headr/src/: lib.rs  main.rs
04_headr/tests/: cli.rs
05_wcr/: Cargo.toml
05_wcr/src/: fileinfo.rs  lib.rs  main.rs
06_uniqr/: Cargo.toml
06_uniqr/src/: lib.rs  main.rs
07_findr/: Cargo.toml
07_findr/src/: lib.rs  main.rs
07_findr/tests/: cli.rs
08_cutr/: Cargo.toml
08_cutr/src/: extract.rs  lib.rs  main.rs
08_cutr/tests/: cli.rs
09_grepr/: Cargo.toml
09_grepr/src/: main.rs
09_grepr/tests/: cli.rs
10_commr/: Cargo.toml
10_commr/src/: main.rs
11_tailr/: Cargo.toml
11_tailr/src/: main.rs
11_tailr/tests/: cli.rs
12_fortuner/: Cargo.toml
12_fortuner/src/: main.rs
13_calr/: Cargo.toml
13_calr/src/: main.rs
13_calr/tests/: cli.rs
13_calr/tests/expected/: 2020.txt
14_lsr/: Cargo.toml
14_lsr/src/: main.rs
