[package]
name = "commr"
version = "0.1.0"
edition = "2024"
authors = ["Bthxtly <bthxtly@gmail.com>"]
discription = "Rust version of `comm`"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
rand = "0.8"
