[package]
name = "lsr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
rand = "0.8"
